# programmable-load

./: LICENSE.md  README.md
Firmware/: CMakeLists.txt  README.md  same51j20a_flash.ld  stm32mp15x.ld
Firmware/Includes/: BuildInfo.h  cstdarg  cstddef  cstdint  remoteproc.h
Firmware/Includes/FreeRTOS/: FreeRTOSConfig.h
Firmware/Sources/: Main.cpp
Firmware/Sources/App/: MainTask.cpp  MainTask.h  README.md
Firmware/Sources/App/Control/: DumbLoadDriver.cpp  DumbLoadDriver.h  Hardware.cpp  Hardware.h  LoadDriver.h  Task.cpp  Task.h
Firmware/Sources/App/Main/: Hardware.cpp  Hardware.h  Task.cpp  Task.h
Firmware/Sources/App/Pinball/: Beeper.cpp  Beeper.h  FrontIoDriver.h  Hardware.cpp  Hardware.h  Task.cpp  Task.h
Firmware/Sources/App/Pinball/FrontIo/: Display.cpp  Display.h  HmiDriver.cpp  HmiDriver.h
Firmware/Sources/App/Pinball/Screens/: Main.cpp  Screens.h  Version.cpp
Firmware/Sources/App/Rpmsg/: Task.cpp  Task.h
Firmware/Sources/App/Thermal/: Hardware.cpp  Hardware.h  Task.cpp  Task.h
Firmware/Sources/Drivers/: ClockMgmt.cpp  ClockMgmt.h  Common.h  Dma.cpp  Dma.h  ExternalIrq.cpp  ExternalIrq.h  Gpio.cpp  Gpio.h  I2C.cpp  I2C.h  I2CBus.cpp  I2CBus.h  Random.cpp  Random.h  SercomBase.cpp  SercomBase.h  Spi.cpp  Spi.h  TimerCounter.cpp  TimerCounter.h  Watchdog.cpp  Watchdog.h
Firmware/Sources/Drivers/I2CDevice/: AT24CS32.cpp  AT24CS32.h  Common.cpp  Common.h  DAC60501.cpp  DAC60501.h  EMC2101.cpp  EMC2101.h  MCP3421.cpp  MCP3421.h  PCA9543A.cpp  PCA9543A.h  PCA9955B.cpp  PCA9955B.h  PI4IOE5V9536.cpp  PI4IOE5V9536.h  XRA1203.cpp  XRA1203.h
Firmware/Sources/Gfx/: Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Icon.cpp  Icon.h  Primitives.cpp  Primitives.h  Types.h
Firmware/Sources/Gfx/Fonts/: Font_Small.cpp  General_14.cpp  General_16_Bold.cpp  General_16_BoldCondensed.cpp  General_16_Condensed.cpp  Numbers_L.cpp  Numbers_XL.cpp
Firmware/Sources/Gfx/Icons/: MainBadgeUsb.cpp  MainBadgeVExt.cpp
Firmware/Sources/Gui/: EasingFunctions.h  InputManager.cpp  InputManager.h  Screen.h  ScreenManager.cpp  ScreenManager.h  WorkQueue.cpp  WorkQueue.h
Firmware/Sources/Gui/Components/: Base.h  Divider.h  List.h  NumericSpinner.h  Scrollbar.h  StaticIcon.h  StaticLabel.cpp  StaticLabel.h  Types.h
Firmware/Sources/Hw/: StatusLed.cpp  StatusLed.h
Firmware/Sources/Init/: CppHeap.cpp  CppRuntime.cpp  FaultHandlers.cpp  StackGuard.cpp  Startup.cpp  Vectors.c
Firmware/Sources/Log/: Logger.cpp  Logger.h  TraceSWO.cpp  TraceSWO.h
Firmware/Sources/Rpc/: Endpoint.h  Mailbox.cpp  Mailbox.h  MessageHandler.cpp  MessageHandler.h  OpenAmp.cpp  OpenAmp.h  ResourceTable.cpp  ResourceTable.h  Rpc.cpp  Rpc.h  Types.h
Firmware/Sources/Rpc/Endpoints/: Handler.h
Firmware/Sources/Rpc/Endpoints/Confd/: Handler.cpp  Handler.h  Service.cpp  Service.h
Firmware/Sources/Rpc/Endpoints/ResourceManager/: Handler.cpp  Handler.h  README.md  Service.cpp  Service.h
Firmware/Sources/Rtos/: Idle.cpp  Memory.cpp  Rtos.h  Start.cpp  Start.h
Firmware/Sources/Supervisor/: Supervisor.cpp  Supervisor.h  Task.cpp  Task.h
Firmware/Sources/Usb/: Descriptors.cpp  Descriptors.h  Init.cpp  Task.cpp  Task.h  Usb.h
Firmware/Sources/Util/: Base32.h  Hash.cpp  Hash.h  HwInfo.cpp  HwInfo.h  InventoryRom.cpp  InventoryRom.h  Unicode.h  Uuid.h
Hardware/: .gitignore  README.md
Hardware/analog/: .gitignore  adc-dac.kicad_sch  analog.kicad_pcb  analog.kicad_prl  analog.kicad_pro  analog.kicad_sch  clock.kicad_sch  interface.kicad_sch  load.kicad_sch  power.kicad_sch  sym-lib-table  thermal.kicad_sch  vsense.kicad_sch
Hardware/controller/: VSense.kicad_sch  analog-io.kicad_sch  canbus.kicad_sch  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  cpu-mux.kicad_sch  cpu.kicad_sch  ethernet.kicad_sch  io-front.kicad_sch  io-rear.kicad_sch  power.kicad_sch  rtc.kicad_sch
Hardware/driver/: .gitignore  acdc.kicad_sch  driver.kicad_pcb  driver.kicad_prl  driver.kicad_pro  driver.kicad_sch  input.kicad_sch  interface.kicad_sch  trigger.kicad_sch  vsense.kicad_sch
Hardware/front/: .gitignore  buttons.kicad_sch  controller.kicad_sch  display.kicad_sch  front.kicad_pcb  front.kicad_prl  front.kicad_pro  front.kicad_sch  indicators.kicad_sch
Hardware/front-bonus-display/: .gitignore  front-bonus-display.kicad_pcb  front-bonus-display.kicad_prl  front-bonus-display.kicad_pro  front-bonus-display.kicad_sch
Hardware/panels/: .gitattributes  back-rev1.fpd  back-rev2.fpd  back-rev4.fpd  front-rev1.fpd  front-rev2.fpd  front-rev4.fpd
Hardware/rear/: .gitignore  fp-lib-table  rear.kicad_pcb  rear.kicad_prl  rear.kicad_pro  rear.kicad_sch
Hardware/shared/: programmable-load.kicad_sym
Hardware/shared/programmable-load.pretty/: 091X516X913_100081358MOD000B.step  1-1337543-0.step  20021221-00010XXLF.step  20021221-00020XXLFc.step  61201022021 (rev1).step  61201022121 (rev1).step  61201622821 (rev1).step  61201622921 (rev1).step  ABRACON-ACM-21.kicad_mod  ABRACON-ARJC07-111071A.kicad_mod  ARJC07-111071A.STEP  ARJM11C7-009-AB(8P).step  AT-1224-TWT-5V-2-R.step  Abracon-ARJM11C7.kicad_mod  Amphenol_ICC-RJHSE-5084-0-0-0.kicad_mod  Amphenol_ICC_-_RJHSE-5084.step  BIVAR__INC_SLP3-150-300-F.step  Bel_-_0ZCG0110AF2C.step  Bel_-_0ZCG0200AF2B.step  Bourns-DR331-0-0-MFG.kicad_mod  Bourns-SDR1307.kicad_mod  Bourns-SRF4532-0-0-MFG.kicad_mod  Bourns_-_DR331-513AE.step  Bourns_-_SDR1307.step  Bourns_-_SRF4532-510Y.step  C&K-D6R-LED.kicad_mod  C40-058-AE-DUAL.kicad_mod  CONN_1-1337543-0.kicad_mod  CONV_P7812-2000-S.kicad_mod  CONV_PCN2-S12-S15-S.kicad_mod  CONV_PDSE1-S12-S3-S.kicad_mod  CONV_PSK-30D-12.kicad_mod  CONV_PSK-45-12.kicad_mod  CONV_PSK-S20C-12.kicad_mod  CONV_V78E03-1000-SMT-TR.kicad_mod  CP_16x25mm_horiz-L.kicad_mod  CRJ061-L1-TH.step  CT-94EW10Ω(100).stp  CT-94EY10Ω(100).stp  (+118 more)
Host/: CMakeLists.txt  README.md
Host/LibLoad/: CMakeLists.txt
Host/LibLoad/Includes/: LibLoad.h
Host/LibLoad/Sources/: Device.cpp  Device.h  DeviceTransport.h  LibLoad.cpp  LibUsbError.h  Usb.cpp  Usb.h
Host/LoadUtil/: CMakeLists.txt
Host/LoadUtil/Sources/: GetInfo.cpp  Main.cpp
